--- a/.github/workflows/daily-security-scan.yml
+++ b/.github/workflows/daily-security-scan.yml
@@ -1,31 +1,21 @@
 name: Security Scan
 
 on:
-  workflow_dispatch:
-    inputs:
-      docker-image:
-        description: 'The image. Defaults to launchdarkly/ld-relay:latest.'
-        type: string
-        required: false
-
   schedule:
     - cron: "0 8 * * *"
 
 jobs:
   scan-relay:
+    strategy:
+      matrix:
+        tag: ['latest', 'v7', 'v8']
+      fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Determine image
-        id: image
-        env:
-          IMAGE: ${{ inputs.docker-image }}
-        run: |
-          echo "value=${IMAGE:-launchdarkly/ld-relay:latest}" >> $GITHUB_OUTPUT
-
       - uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ steps.image.outputs.value }}
+          image-ref: launchdarkly/ld-relay:${{ matrix.tag }}
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
