--- a/.github/workflows/check-alpine-version.yml
+++ b/.github/workflows/check-alpine-version.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ matrix.branch }}
+          ref: ${{ github.ref }}
 
       - name: Get current Alpine version
         id: alpine-version
