--- a/.github/workflows/check-alpine-version.yml
+++ b/.github/workflows/check-alpine-version.yml
@@ -9,7 +9,7 @@ jobs:
   create-prs:
     permissions:
       contents: write
-      pull-requests: write
+      issues: write
     runs-on: ubuntu-latest
     strategy:
       matrix:
