update some actions to use commit SHAs

--- a/.github/workflows/check-alpine-version.yml
+++ b/.github/workflows/check-alpine-version.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Create pull request
         if: steps.update-alpine.outcome == 'success'
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@6d6857d36972b65feb161a90e484f2984215f83e
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           add-paths: |
