--- a/Dockerfile-debug-nonroot-static-debian12.goreleaser
+++ b/Dockerfile-debug-nonroot-static-debian12.goreleaser
@@ -2,7 +2,7 @@
 
 # See .ldrelease/config.yml for an explanation of the build/release process.
 
-FROM gcr.io/distroless/static-debian12:nonroot
+FROM gcr.io/distroless/static-debian12:debug-nonroot
 # See "Runtime platform versions" in CONTRIBUTING.md
 
 COPY ld-relay /usr/bin/ldr
