--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -1,4 +1,4 @@
-# This is the Dockerfile used for release (published to dockerhub by goreleaser)
+# This is a Dockerfile used for release (published to dockerhub by goreleaser)
 
 FROM alpine:3.20.0
 # See "Runtime platform versions" in CONTRIBUTING.md
