build: fixing multiline GITHUB_OUTPUT variables

--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -66,8 +66,8 @@ runs:
         image_and_digest=$(echo "$ARTIFACTS" | jq -r '.[] | select (.type=="Docker Manifest") | .path')
         image=$(echo "${image_and_digest}" | cut -d'@' -f1 | cut -d':' -f1)
         digest=$(echo "${image_and_digest}" | cut -d'@' -f2)
-        echo "name=$image" >> "$GITHUB_OUTPUT"
-        echo "digest=$digest" >> "$GITHUB_OUTPUT"
+        { echo 'name<<EOF'; echo $image; echo EOF } >> "$GITHUB_OUTPUT"
+        { echo 'digest<<EOF'; echo $digest; echo EOF } >> "$GITHUB_OUTPUT"
 
     - name: Upload Release Artifacts
       shell: bash
