build: updating docker provenance generator to use repo vars/secrets for docker registry access

--- a/.github/workflows/manual-publish.yml
+++ b/.github/workflows/manual-publish.yml
@@ -74,6 +74,6 @@ jobs:
     with:
       image: ${{ matrix.image }}
       digest: ${{ matrix.digest }}
-      registry-username: ${{ github.actor }}
+      registry-username: ${{ vars.DOCKER_USERNAME }}
     secrets:
-      registry-password: ${{ secrets.GITHUB_TOKEN }}
+      registry-password: ${{ secrets.DOCKER_TOKEN }}
