--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
     needs: go-versions
     runs-on: ubuntu-latest
     name: "Trivy Scan of Docker Image"
+    env:
+      # Avoid rate-limiting on ghcr.io (https://github.com/aquasecurity/trivy-action/issues/389)
+      TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db:2
     steps:
       - uses: actions/checkout@v4
         with:
